--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,76 +1,41 @@
 [project]
-name = "PACKAGE"
-description = "DESCRIPTION"
-readme = "README.md"
-dynamic = ["version"]
-requires-python = ">=3.10"
-
-dependencies = [
+name = "whatsapp-analyzer"
+version = "0.1.0"
+description = "A tool for analyzing WhatsApp group chat exports"
+authors = [
+    { name = "Your Name", email = "your.email@example.com" }
 ]
+dependencies = [
+    "pandas>=2.0.0",
+    "click>=8.0.0",
+    "loguru>=0.7.0",
+    "pydantic>=2.0.0",
+    "rich>=13.0.0",
+    "tqdm>=4.65.0",
+    "ruff>=0.11.6",
+]
+requires-python = ">=3.8"
 
 [build-system]
-requires = ["setuptools>=64", "setuptools_scm>=8"]
-build-backend = "setuptools.build_meta"
-
-[project.optional-dependencies]
-dev = [
-    "ipython",
-    "mypy",
-    "pre-commit",
-    "pytest",
-    "pytest-coverage",
-    "ruff",
-]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
 [tool.ruff]
-exclude = [".venv/"]
 line-length = 120
-target-version = "py310"
+target-version = "py38"
 
 [tool.ruff.lint]
 select = [
-    # Annotations: Enforce type annotations
-    "ANN",
-    # Complexity: Enforce a maximum cyclomatic complexity
-    "C90",
-    # Pydocstyle: Enforce docstrings
-    "D",
-    # Pyflakes.
-    "F",
-    # Isort: Enforce import order
-    "I",
-    # Numpy: Enforce numpy style
-    "NPY",
-    # Print: Forbid print statements
-    "T20",
+    "E",  # pycodestyle errors
+    "W",  # pycodestyle warnings
+    "F",  # pyflakes
+    "I",  # isort
+    "B",  # flake8-bugbear
 ]
-ignore = [
-    # Allow self and cls to be untyped, and allow Any type
-    "ANN101", "ANN102", "ANN401",
-    # Pydocstyle ignores
-    "D100", "D101", "D104", "D203", "D212", "D401",
-    # Allow use of f-strings in logging
-    "G004"
-]
+ignore = []
 
-[tool.pydoclint]
-style = "sphinx"
-exclude = "test_"
-allow-init-docstring = true
-arg-type-hints-in-docstring = false
-check-return-types = false
-require-return-section-when-returning-nothing = false
-
-[tool.mypy]
-python_version = "3.10"
-warn_unused_configs = true
-ignore_missing_imports = true
-
-[tool.setuptools]
-packages = ["PACKAGE"]
-
-[tool.setuptools_scm]
-# can be empty if no extra settings are needed, presence enables setuptools_scm
-
-[tool.setuptools.dynamic]
-version = {attr = "PACKAGE.version.__version__"}
+[tool.ruff.format]
+quote-style = "double"
+indent-style = "space"
+skip-magic-trailing-comma = false
+line-ending = "auto"
