--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "rich>=13.0.0",
     "tqdm>=4.65.0",
     "ruff>=0.11.6",
+    "pre-commit>=3.5.0",
 ]
 requires-python = ">=3.8"
 
