--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,9 +13,9 @@ dependencies = [
     "rich>=13.0.0",
     "tqdm>=4.65.0",
     "ruff>=0.11.6",
-    "pre-commit>=3.5.0",
+    "python-fasthtml>=0.12.12",
 ]
-requires-python = ">=3.8"
+requires-python = ">=3.12"
 
 [build-system]
 requires = ["hatchling"]
@@ -23,7 +23,6 @@ build-backend = "hatchling.build"
 
 [tool.ruff]
 line-length = 120
-target-version = "py38"
 
 [tool.ruff.lint]
 select = [
