Reorganize codebase with central src directory and separate CLI/web interfaces

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,10 @@ dependencies = [
 ]
 requires-python = ">=3.12"
 
+[project.scripts]
+whatsapp-analyzer = "src.cli.main:cli"
+whatsapp-web = "src.web.main:app"
+
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
