--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,9 @@ whatsapp-web = "src.web.main:app"
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
+[tool.hatch.build.targets.wheel]
+packages = ["src"]
+
 [tool.ruff]
 line-length = 120
 
